# akd-bench

./: .my.cnf  Cargo.toml  README.md
output_csvs/: azks_experiment_100000_10100000  azks_experiment_remote_100000_10100000  ozks_experiment_100000_10100000  ozks_experiment_1000_10000  ozks_experiment_100_1000  ozks_experiment_long_100000_100100000  ozks_experiment_remote_100000_1100000  ozks_terminal_output_remote.txt  terminal_output.txt  terminal_output_long.txt  terminal_output_remote.txt
src/: main.rs
