[package]
name = "akd-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#akd_mysql = "0.6"
#akd = "0.6"
mysql_async = "0.29"
winter-crypto = "0.2"
winter-math = "0.2"
winter-utils = "0.2"
bytes = "1.1.0"
log = "0.4.14"
tokio = { version = "1.10", features = ["full"] }
csv = "1.0.0-beta.2"
rand = "0.8.5"

[dependencies.akd]
git = "https://github.com/novifinancial/akd"
#branch = "main"
#rev = "0b5737c9e4d00a752ad0faad8631e96204806d5d"
rev = "4c6dafa8fc238e802a2828725994b7cb2ade7350"
features = ["serde_serialization"]

[dependencies.akd_mysql]
git = "https://github.com/novifinancial/akd"
#rev = "0b5737c9e4d00a752ad0faad8631e96204806d5d"
rev = "4c6dafa8fc238e802a2828725994b7cb2ade7350"
#branch = "main"
