[package]
name = "akd-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#akd_mysql = "0.6"
#akd = "0.6"
mysql_async = "0.29"
winter-crypto = "0.2"
winter-math = "0.2"
winter-utils = "0.2"
bytes = "1.1.0"
log = "0.4.14"
tokio = { version = "1.10", features = ["full"] }
csv = "1.0.0-beta.2"
rand = "0.8.5"

[dependencies.akd]
git = "https://github.com/novifinancial/akd"
#branch = "main"
rev = "b571a7ee9e3b29102e26dfe9aaec6afe003b5310"
features = ["serde_serialization"]

[dependencies.akd_mysql]
git = "https://github.com/novifinancial/akd"
#branch = "main"
rev = "b571a7ee9e3b29102e26dfe9aaec6afe003b5310"